apps/staging/oai-provider/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: oai-provider-external
  namespace: staging
spec:
  type: ExternalName
  externalName: 130.73.240.217
  ports:
  - port: 80
