apps/staging/oai-provider/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: oai-provider-route
  namespace: staging
spec:
  entryPoints:
  - websecure
  routes:
  - match: Host(`oai.staging.mardi4nfdi.org`)
    kind: Rule
    services:
    - name: oai-provider-external
      port: 80
  tls:
    certResolver: le
